# Student-Rental-Website

./: .env.example  .gitignore  Dockerfile  README.md  blog_data.json  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  routes.py
app/forms/: __init__.py  forms.py
app/models/: __init__.py  models.py
app/routes/: __init__.py  routes.py
app/static/: style.css
app/templates/: about.html  account.html  add_listing.html  edit_listing.html  features.html  landing_page.html  layout.html  login.html  my_listings.html  properties.html  register.html  reset_request.html  reset_token.html  search_results.html  to_buy.html  to_rent.html
app/utilities/: __init__.py  utilities.py
app/webspider/: blog_scraper.py  estate_data.json  estate_scraper.py
instance/: site.db
migrations/versions/: b80874a439b4_initial_schema_baseline.py  cf1fff287c69_rename_post_rooms_to_bedrooms.py
tests/: conftest.py  test_routes.py
